-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.6.0
-
None
-
Linux
-
6c03121668f0aad18178a042e5efc2666bb62303
When adding new Class or file to exciting project, Qt Creator add new SOURCE and HEADER to the .pro file instead of using existing ones, here is an example of my pro file after adding 3 classes to it:
#------------------------------------------------- # # Project created by QtCreator 2012-11-24T19:28:11 # #------------------------------------------------- QT += core gui greaterThan(QT_MAJOR_VERSION, 4): QT += widgets TARGET = deeel TEMPLATE = app SOURCES += main.cpp\ mainwindow.cpp HEADERS += mainwindow.h FORMS += mainwindow.ui HEADERS += \ test.h SOURCES += \ test.cpp HEADERS += \ othertest.h SOURCES += \ othertest.cpp HEADERS += \ lasttest.h SOURCES += \ lasttest.cpp
For Gerrit Dashboard: QTCREATORBUG-8320 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
47307,1 | fix qt project manager not finding existing variable assignments | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
47308,1 | fix qt project manager not finding existing variable assignments | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |