fix qt project manager not finding existing variable assignments

... by fixing parameters of QMakeParser::parsedBlock() call. this was an
omission from 00e9be4246.

Task-number: QTCREATORBUG-8320
Change-Id: Iec36e2986efc7d04d292000185db05aa24f4ee1b
Reviewed-by: Daniel Teske <daniel.teske@digia.com>